[gd_scene load_steps=20 format=3 uid="uid://guah88v45u7t"]

[ext_resource type="PackedScene" uid="uid://duub1wikjf2dm" path="res://content/inventory/Inventory.tscn" id="1_70hd1"]
[ext_resource type="Script" uid="uid://d1q1cnmay8wqn" path="res://content/Game.gd" id="1_jbxle"]
[ext_resource type="Texture2D" uid="uid://ls7nlt5u0hla" path="res://textures/ui/overlay/clock_tape.png" id="2_md648"]
[ext_resource type="Texture2D" uid="uid://dm6ena3qfv2lc" path="res://textures/ui/overlay/table.png" id="2_st05n"]
[ext_resource type="PackedScene" uid="uid://dadnblwwob0wo" path="res://content/inventory/Slot.tscn" id="3_dy4aq"]
[ext_resource type="Texture2D" uid="uid://byqlbxq5mqdnp" path="res://textures/ui/overlay/tabletop_frame.png" id="4_68l1a"]
[ext_resource type="Texture2D" uid="uid://tr45nulg6u1j" path="res://textures/ui/overlay/clock_frame.png" id="4_buoxy"]
[ext_resource type="PackedScene" uid="uid://cyokyhmfmxkdm" path="res://content/places/Workshop.tscn" id="4_hcm7o"]
[ext_resource type="PackedScene" uid="uid://bkahqi7f88tqw" path="res://content/places/Town.tscn" id="5_6armo"]
[ext_resource type="PackedScene" uid="uid://cs4i1rv4k2q2g" path="res://content/places/OrbShop.tscn" id="9_rlgr7"]
[ext_resource type="PackedScene" uid="uid://bxg8tqr68hqrm" path="res://content/places/Postbox.tscn" id="10_ycinl"]
[ext_resource type="PackedScene" uid="uid://6n1w7vvglk07" path="res://content/places/Smithy.tscn" id="11_howok"]
[ext_resource type="PackedScene" uid="uid://bsso077vidl0w" path="res://content/places/Museum.tscn" id="12_mjlj4"]
[ext_resource type="PackedScene" uid="uid://b428rqsvm4xd2" path="res://content/places/Bedroom.tscn" id="13_5u5ol"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_q2g6x"]
noise_type = 0
frequency = 0.1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_37ls4"]
width = 1280
height = 640
noise = SubResource("FastNoiseLite_q2g6x")

[sub_resource type="Animation" id="Animation_gakmu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TransScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TransScreen:texture:noise:seed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l24jv"]
resource_name = "fadein"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TransScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TransScreen:texture:noise:seed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ewf3y"]
_data = {
&"RESET": SubResource("Animation_gakmu"),
&"fadein": SubResource("Animation_l24jv")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_jbxle")

[node name="Desk" type="Sprite2D" parent="."]
position = Vector2(6, 667)
texture = ExtResource("2_st05n")
centered = false
offset = Vector2(-10, -20)

[node name="Research" parent="." instance=ExtResource("3_dy4aq")]
offset_left = 1099.0
offset_top = 685.0
offset_right = 1219.0
offset_bottom = 805.0
slot_type = 2
max_stack = 1

[node name="Inventory" parent="." instance=ExtResource("1_70hd1")]
position = Vector2(2, 647)

[node name="SceneViewer" type="Node2D" parent="."]

[node name="Workshop" parent="SceneViewer" instance=ExtResource("4_hcm7o")]
visible = false

[node name="Town" parent="SceneViewer" instance=ExtResource("5_6armo")]
visible = false

[node name="OrbShop" parent="SceneViewer" instance=ExtResource("9_rlgr7")]
visible = false

[node name="Postbox" parent="SceneViewer" instance=ExtResource("10_ycinl")]
visible = false

[node name="Smithy" parent="SceneViewer" instance=ExtResource("11_howok")]
visible = false

[node name="Museum" parent="SceneViewer" instance=ExtResource("12_mjlj4")]
visible = false

[node name="Bedroom" parent="SceneViewer" instance=ExtResource("13_5u5ol")]
visible = false

[node name="TransScreen" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1280.0
offset_bottom = 640.0
mouse_filter = 2
texture = SubResource("NoiseTexture2D_37ls4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransScreen"]
root_node = NodePath("../../SceneViewer")
libraries = {
&"": SubResource("AnimationLibrary_ewf3y")
}

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(2, -7)
texture = ExtResource("4_68l1a")
centered = false
offset = Vector2(-10, -10)

[node name="DeskOverlay" type="Node2D" parent="."]

[node name="Clock" type="Node2D" parent="DeskOverlay"]
position = Vector2(969, 751)

[node name="Tape" type="Sprite2D" parent="DeskOverlay/Clock"]
texture_repeat = 2
texture = ExtResource("2_md648")
region_enabled = true
region_rect = Rect2(-125, 0, 240, 110)

[node name="Frame" type="Sprite2D" parent="DeskOverlay/Clock"]
texture_repeat = 2
texture = ExtResource("4_buoxy")
region_rect = Rect2(-100, 0, 250, 130)

[node name="Money" type="Label" parent="DeskOverlay"]
offset_left = 924.0
offset_top = 826.0
offset_right = 1084.0
offset_bottom = 881.0
theme_override_font_sizes/font_size = 40
text = "9999999"

[node name="Knowledge" type="Label" parent="DeskOverlay"]
offset_left = 924.0
offset_top = 892.0
offset_right = 1084.0
offset_bottom = 947.0
theme_override_font_sizes/font_size = 40
text = "9999999"

[connection signal="changed_mode" from="SceneViewer/Workshop" to="." method="_on_workshop_changed_mode"]
[connection signal="request_scene_change" from="SceneViewer/Workshop" to="." method="_on_scene_change_request"]
[connection signal="request_valid_slot" from="SceneViewer/Workshop" to="." method="_on_inv_slot_request"]
[connection signal="request_scene_change" from="SceneViewer/Town" to="." method="_on_scene_change_request"]
[connection signal="request_scene_change" from="SceneViewer/OrbShop" to="." method="_on_scene_change_request"]
[connection signal="request_scene_change" from="SceneViewer/Postbox" to="." method="_on_scene_change_request"]
[connection signal="request_scene_change" from="SceneViewer/Smithy" to="." method="_on_scene_change_request"]
[connection signal="request_scene_change" from="SceneViewer/Museum" to="." method="_on_scene_change_request"]
[connection signal="request_scene_change" from="SceneViewer/Bedroom" to="." method="_on_scene_change_request"]
